--- a/.github/workflows/deneme.yml
+++ b/.github/workflows/deneme.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build Android Release
         run: |
-          cd android && ./gradlew assembleRelease
+          cd ./gradlew assembleRelease
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
