--- a/.github/workflows/deneme.yml
+++ b/.github/workflows/deneme.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'adopt'
       - name: Build APK
         run: ./gradlew assembleDebug
       - name: Create Release
