--- a/.github/workflows/deneme.yml
+++ b/.github/workflows/deneme.yml
@@ -19,7 +19,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.av }}
         with:
           tag_name: v1.0.0
           release_name: Release 1.0.0
@@ -32,7 +32,7 @@ jobs:
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.av }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: app/build/outputs/apk/debug/app-debug.apk
